test/libsolidity/syntaxTests/indexing/index_range_access_assert.sol
// Used to trigger assert
contract s{}
function f() {s[:][];}
// ----
// TypeError 1760: (53-57='s[:]'): Types cannot be sliced.
